tests/baselines/reference/parserES5ComputedPropertyName1.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts(2,5): error TS1166: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts (1 errors) ====
    declare class C {
        [e]: number 
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
    }